fix stretching images in right container

--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ padding: 2rem 0;
   display:flex;
   flex-direction: column;
   justify-content: center;
+  width: 65%;
 }
 .side-container h3{
     margin-bottom: 1rem;
@@ -200,8 +201,13 @@ padding: 2rem 0;
   }
 }
 .pictureandside img {
-  width: 35%;
+  width: 100%;
+  height: auto;
   padding: 1rem;
+  box-sizing: border-box;
+}
+.flex-image-wrap {
+  width:35%;
 }
 @media only screen and (max-width: 1150px)  {
 .pictureandside img {
